--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,10 @@
       {
         "source": "**",
         "destination": "/index.html"
+      },
+      {
+        "source": "/addClap",
+        "function": "addClap"
       }
     ]
   },
