--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: Checkout the repository
       uses: actions/checkout@master
+
+    - name: Install dependencies
+      run: npm install
       
     - name: Deploy to Firebase
       uses: w9jds/firebase-action@master
