--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,10 @@ jobs:
       uses: actions/checkout@master
 
     - name: Install dependencies
-      run: npm install
+      run: |
+        cd functions
+        npm install
+        cd ..
       
     - name: Deploy to Firebase
       uses: w9jds/firebase-action@master
