--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,18 @@
     ],
     "rewrites": [
       {
+        "source": "/getClaps",
+        "function": "getClaps"
+      },
+      {
+        "source": "/addClap",
+        "function": "addClap"
+      },
+      {
+        "source": "/addContact",
+        "function": "addContact"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
@@ -20,6 +32,21 @@
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    ],
+    "source": "functions"
+  },
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "database": {
+      "port": 9000
+    },
+    "hosting": {
+      "port": 5000
+    }
   }
 }
