--- a/functions/package.json
+++ b/functions/package.json
@@ -17,9 +17,26 @@
     "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
+    "@firebase/testing": "^0.19.0",
+    "@types/jest": "^25.2.1",
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1",
-    "firebase-functions-test": "^0.1.6"
+    "firebase-functions-test": "^0.1.7",
+    "ts-jest": "^25.3.1"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  }
 }
