--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,8 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "jest test/"
   },
   "engines": {
     "node": "8"
@@ -22,6 +23,7 @@
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1",
     "firebase-functions-test": "^0.1.7",
+    "jest": "^25.3.0",
     "ts-jest": "^25.3.1"
   },
   "private": true,
