feature: run automatic testing on pull requests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,13 @@
+
 # This is a basic workflow to help you get started with Actions
 
-name: Deploy
+name: Test
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
+  pull_request:
     branches: [ master ]
-#   pull_request:
-#     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -29,9 +28,9 @@ jobs:
         npm install
         cd ..
 
-    - name: Deploy to Firebase
-      uses: w9jds/firebase-action@master
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-      with:
-        args: deploy
+    - name: Run automatic tests
+      run: |
+        cd functions
+        npm test
+        cd ..
+        
