add some public testing functionality. restructure public js

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,7 @@ jobs:
       uses: actions/checkout@master
 
     - name: Install dependencies
-      run: |
-        cd functions
-        npm install
-        cd ..
+      run: npm install
 
     - name: Deploy to Firebase
       uses: w9jds/firebase-action@master
