--- a/firebase.json
+++ b/firebase.json
@@ -15,6 +15,10 @@
         "source": "**",
         "destination": "/index.html"
       }
+      {
+        "source": "tyc",
+        "destination": "/tyc.html"
+      }
     ]
   },
   "functions": {
