Functionality for Issue
[WIP] this functionality needs testing.

--- a/firebase.json
+++ b/firebase.json
@@ -24,6 +24,10 @@
         "function": "addContact"
       },
       {
+        "source": "/addPossibleFoundation",
+        "function": "addPossibleFoundation"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
