--- a/firebase.json
+++ b/firebase.json
@@ -24,6 +24,26 @@
         "function": "addContact"
       },
       {
+        "source": "/addMessage",
+        "function": "addMessage"
+      },
+      {
+        "source": "addFoundation",
+        "function": "addFoundation"
+      },
+      {
+        "source": "getCountryFoundations",
+        "function": "getCountryFoundations"
+      },
+      {
+        "source": "getDefaultFoundations",
+        "function": "getDefaultFoundations"
+      },
+      {
+        "source": "addPossibleFundation",
+        "function": "addPossibleFundation"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
